bunch of layout changes

--- a/templates/creditspage.html
+++ b/templates/creditspage.html
@@ -12,7 +12,7 @@
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="content">
-                        <div class="header">Bradley Phati</div>
+                        <div class="header">Bradley Pahati: 500829758</div>
                         <p>Responsibilities: Webpage Development, Semantic UI Research and Implementation, CSS Styling</p>
                     </div>
                 </div>
