--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
-                    <div class="segment">
+                    <div class="ui segment">
 
                         <h2 class="ui header">Creating a Webpage with SemanticUI</h2>
                         <p>Now that we know the strengths and weaknesses of Semantic UI and Flask, let's create an
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
-                    <div class="segment">
+                    <div class="ui segment">
                         <h2 class="ui header">Create a simple Flask App</h2>
                         <h3 class="ui dividing header">Make a Flask app</h3>
                         <p>Following the installation of Flask, create a file for running your website with a .py
