--- a/templates/install.html
+++ b/templates/install.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
-                    <div class="segment">
+                    <div class="ui segment">
                         <h2 class="ui large header">Flask</h2>
                         <p>You can refer to the documentation at the official site for Flask: <a href="http://flask.pocoo.org/docs/1.0/installation/">http://flask.pocoo.org/docs/1.0/installation/</a></p>
 
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
-                    <div class="segment">
+                    <div class="ui segment">
                         <h2 class="ui large header">Semantic UI</h2>
                         <p>You can refer to the documentation at the official site for Semantic UI: <a href="https://semantic-ui.com/">https://semantic-ui.com/</a></p>
 
