--- a/templates/install.html
+++ b/templates/install.html
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
-                    <div class="segment">
+                    <div class="ui segment">
                         <h2 class="ui large header">Heroku</h2>
                         <p>Once you made your finished website, you can deploy it to Heroku</p>
                         <h3 class="ui dividing header">Make an account on Heroku</h3>
