--- a/templates/demopage.html
+++ b/templates/demopage.html
@@ -16,14 +16,14 @@
                             dining at the top of the tower at ‘360’ would surely be memorable.
                         </p>
                         <img src='https://res.cloudinary.com/simpleview/image/upload/c_fit,w_1000,h_1000/crm/toronto/Summer-2015-Skyline0_5e954389-5056-a36f-234589b46e9b25ae.jpg'
-                            class='ui medium image' />
+                            class='ui fluid image' />
 
                         <h2 class="ui dividing header">Ontario Place</h2>
                         <p>The Ontario Place is an iconic waterfront location. Previously closed, it has now been
                             re-opened as a beautiful public space that is completely free to enter. During the
                             winter, people are free to skate and take in the wonderful winter landscape.
                         </p>
-                        <img src='https://pbs.twimg.com/media/DQecaREVwAAewMe.jpg' class='ui medium image'>
+                        <img src='https://pbs.twimg.com/media/DQecaREVwAAewMe.jpg' class='ui fluid image'>
 
                         <h2 class="ui dividing header">Canada’s Wonderland</h2>
                         <p>For those looking for some excitement on their visit to Toronto, this massive theme
@@ -32,7 +32,7 @@
                             downtown Toronto, anyone visiting will most certainly not regret the longer trip.
                         </p>
                         <img src='https://cdn-cloudfront.cfauthx.com/binaries/content/gallery/cw-en-ca/blogs/last-blast-banner.png'
-                            class='ui medium image'>
+                            class='ui fluid image'>
 
                         <h2 class="ui dividing header">The ROM and The AGO</h2>
                         <p>The Royal Ontario Museum and the Art Gallery of Ontario both house interesting
@@ -40,16 +40,17 @@
                             different themes. Anyone who wants a slower day of learning and observation will
                             surely enjoy given them a visit.</p>
                         <img src='https://tce-live2.s3.amazonaws.com/media/media/6086645c-c9df-4fb9-9bee-a042fd87d75c.jpg'
-                            class='ui medium image'>
+                            class='ui fluid image'>
+                        <br>
                         <img src='http://urbantoronto.ca/sites/default/files/imagecache/display-slideshow/images/articles/2015/10/17734/17734-59272.png'
-                            class='ui medium image'>
+                            class='ui fluid image'>
 
                         <h3 class="ui dividing header">Kensington Market</h3>
                         <p>Kensington Market is home to many local restaurants, bars, and stores.
                             Strolling through the market will certainly bring you to just the meal
                             you were craving, all while supporting smaller, local businesses. </p>
                         <img src='https://s3.amazonaws.com/btoimage/prism-thumbnails/articles/2017411-kensingtonflea.jpg-resize_then_crop-_frame_bg_color_FFF-h_1365-gravity_center-q_70-preserve_ratio_true-w_2048_.webp'
-                            class='ui medium image'>
+                            class='ui fluid image'>
                     </div>
                 </div>
             </div>
