--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                     <div class="ui segment">
                         <h2 class="ui large header">Semantic UI</h2>
                         <p>Semantic is a development framework that helps create beautiful, responsive layouts using
-                            human-friendly HTML</p>
+                            human-friendly HTML.</p>
 
                         <h3 class="ui dividing header">Popularity</h3>
                         <p>Semantic UI is not as popular as Bootstrap, and has a larger learning curve.</p>
@@ -28,20 +28,20 @@
                                         This makes it easy to load only certain packages which decreases both file size
                                         and
                                         access
-                                        time</p>
+                                        time.</p>
                                 </div>
                             </div>
                             <div class="item">The elements offer a huge amount of customization compared to other
                                 frameworks
                                 such
-                                as Bootstrap</div>
+                                as Bootstrap.</div>
                             <div class="item">
                                 <div class="content">
                                     <div class="header">Its semantic</div>
                                     <p>It uses a semantic naming scheme for the styling, which makes it easy to
                                         understand
                                         for
-                                        beginners</p>
+                                        beginners.</p>
                                 </div>
                             </div>
                             <div class="item">
@@ -181,7 +181,7 @@
                         <h3 class="ui dividing header">Types of Developers</h3>
                         <p>Flask is often used in smaller projects that have opted to use python. Flask is also useful
                             for
-                            small projects due to being lightweight and easy to deploy</p>
+                            small projects due to being lightweight and easy to deploy.</p>
 
                         <h3 class="ui dividing header">Types of Websites</h3>
                         <div class="item">
