--- a/templates/install.html
+++ b/templates/install.html
@@ -60,14 +60,14 @@
                 <div class="ui raised segments" style="padding: 1em">
                     <div class="ui segment">
                         <h2 class="ui large header">Heroku</h2>
-                        <p>Once you made your finished website, you can deploy it to Heroku</p>
+                        <p>Once you made your finished website, you can deploy it to Heroku.</p>
                         <h3 class="ui dividing header">Make an account on Heroku</h3>
                         <p>First, you need to make an account on Heroku: <a href="https://signup.heroku.com/">https://signup.heroku.com/</a></p>
 
                         <h3 class="ui dividing header">Create a list of your Python dependencies</h3>
                         <p>You will need this for Heroku to know what packages your app has installed. In your
                             terminal,
-                            after navigating to your Project's lcoation, run the command below</p>
+                            after navigating to your Project's location, run the command below.</p>
                         <pre><code>pip freeze > requirements.txt</code></pre>
 
                         <h3 class="ui dividing header">Make a "Procfile"</h3>
@@ -75,30 +75,30 @@
                             so
                             we do the following in the terminal...</p>
                         <pre><code>vi Procfile</code></pre>
-                        <p>This will open vim, press i to begin typing the following into the file</p>
+                        <p>This will open vim, press i to begin typing the following into the file:</p>
                         <pre><code>web:gunicorn filename:app</code></pre>
                         <p>NOTE: filename should instead be the name of your flask application (without the .py
                             extension)</p>
-                        <p>Now exit vim by hitting the escape key, and pressing WQ</p>
+                        <p>Now exit vim by hitting the escape key, and pressing WQ.</p>
 
                         <h3 class="ui dividing header">Make an application on Heroku</h3>
-                        <p>Go to Heroku and create a new app</p>
-                        <p>Give a unique app name and follow the remaining instructions</p>
+                        <p>Go to Heroku and create a new app.</p>
+                        <p>Give the app a unique name and follow the remaining instructions.</p>
 
                         <h3 class="ui dividing header">Install the Heroku CLI</h3>
-                        <p>This will be needed to continue in the terminal</p>
+                        <p>This will be needed to continue in the terminal.</p>
 
                         <h3 class="ui dividing header">Run Heroku create</h3>
-                        <p>log into heroku from your terminal like so:</p>
+                        <p>Log into heroku from your terminal like so:</p>
                         <pre><code>heroku login</code></pre>
                         <p>You will be prompted to log in from your default browser. Then run the following command:</p>
                         <pre><code>heroku create</code></pre>
 
                         <h3 class="ui dividing header">Setup Heroku</h3>
-                        <p>This is needed to be able to "push" your code on to heroku's servers</p>
+                        <p>This is needed to be able to "push" your code on to heroku's servers.</p>
                         <pre><code>git init</code></pre>
                         <pre><code>heroku git:remote -a NAMEOFYOURHEROKUAPP</code></pre>
-                        <p>NOTE: replace the all caps part of the command with the name you gave your heroku app</p>
+                        <p>NOTE: Replace the all caps part of the command with the name you gave your heroku app.</p>
 
                         <p>Confirm that Heroku's servers are added with this command:</p>
                         <pre><code>git remote -v</code></pre>
@@ -112,9 +112,9 @@
                         <p>To confirm, see if heroku is available as an option with the command below:</p>
                         <pre><code>git status</code></pre>
                         <pre><code>git push heroku master</code></pre>
-                        <p>CONGRATS! Your website should now be online with Heroku. After the results are done loading
+                        <p>Congratulations! Your website should now be online with Heroku. After the results are done loading
                             on
-                            your terminal screen, heroku should give you a link to view your website</p>
+                            your terminal screen, heroku should give you a link to view your website.</p>
                     </div>
                 </div>
             </div>
