Edited text for errors

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -104,7 +104,7 @@
                         <p>On your terminal screen, you will be given a link to view your flask app. Copy paste it
                             into
                             your favourite browser, or simply put into your address bar: localhost:5000</p>
-                        <p>This will run the flask app locally and you can see changes from your computer</p>
+                        <p>This will run the flask app locally and you can see changes from your computer.</p>
                     </div>
                 </div>
             </div>
