Edited text for errors

--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -13,7 +13,7 @@
                         our previous experince with that framework was useful. </p>
                     <p>Flask was not too difficult to install. It performs as advertised: very easy to set up and
                         get
-                        running for lightweight projects such as this one</p>
+                        running for lightweight projects such as this one.</p>
 
 
                     <h3 class="ui dividing header">How was installation and configuration?</h3>
@@ -25,7 +25,7 @@
                     <p>Installing and Configuring on the host was slightly difficult and very specific, there were
                         some
                         gaps on how to deploy Flask onto Heroku, so Youtube and official documentation were both
-                        consulted to get a better understanding</p>
+                        consulted in order to get a better understanding.</p>
 
                     <h3 class="ui dividing header">How easy was is to create a page?</h3>
                     <p>Creating a page using Semantic UI was very easy. However, the structure was similar to
@@ -37,8 +37,8 @@
                         easy to keep inside your html pages, whereas Flask must run the html pages in its own main
                         Python file using different routes. This sounds complicated at first, but like most
                         softwares,
-                        you can get used to it, plus, it is meant to be easier than some other back-end frameworks,
-                        such as Django</p>
+                        you can get used to it. Plus, it is meant to be easier than some other back-end frameworks,
+                        such as Django.</p>
 
 
                     <h3 class="ui dividing header">How was the learning curve?</h3>
@@ -52,7 +52,7 @@
                         than
                         most other frameworks we explored within this course. That may be also because no one in
                         the
-                        team is familiar enough to code comfortably in Python</p>
+                        team was familiar enough to code comfortably in Python initially.</p>
 
                     <h3 class="ui dividing header">How would you have done things differently?</h3>
                     <p>Using more computers with linux as the operating system would have made the installation
@@ -68,7 +68,7 @@
                         to
                         get familiar with the full capabilities of the Flask framework before using it as the
                         chosen
-                        back-end for this project</p>
+                        back-end for this project.</p>
                 </div>
             </div>
         </div>
