--- a/templates/home.html
+++ b/templates/home.html
@@ -31,10 +31,13 @@
                                         time.</p>
                                 </div>
                             </div>
-                            <div class="item">The elements offer a huge amount of customization compared to other
-                                frameworks
-                                such
-                                as Bootstrap.</div>
+                            <div class="item">
+                                <div class="content">
+                                    <div class="header">Very customizable</div>
+                                    <p>The elements offer a huge amount of customization compared to
+                                        other frameworks such as Bootstrap.</p>
+                                </div>
+                            </div>
                             <div class="item">
                                 <div class="content">
                                     <div class="header">Its semantic</div>
@@ -87,17 +90,15 @@
                         </div>
 
                         <h3 class="ui dividing header">Types of Developers</h3>
-                        <div class="ui bulleted list" style="padding-bottom: 1em">
-                            <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some
-                                more
-                                learning,
-                                and who do not like using bootstrap.</p>
-                        </div>
+                        <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some
+                            more
+                            learning,
+                            and who do not like using bootstrap.</p>
                         <h3 class="ui dividing header">Types of Websites</h3>
                         <div class="ui bulleted list" style="padding-bottom: 2em">
                             <div class="item">
                                 <div class="content">
-                                    <a href="https://www.snapchat.com/">SnapChat</a>
+                                    <a href="https://www.snapchat.com/">Snapchat</a>
                                 </div>
                             </div>
                             <div class="item">
@@ -157,7 +158,7 @@
                             </div>
                             <div class="item">
                                 <div class="content">
-                                    <div class="header">The Core of the framework is small and easily extensible.</div>
+                                    <div class="header">The Core of the framework is small and easily extensible</div>
                                 </div>
                             </div>
                         </div>
