small sentence changes

--- a/templates/install.html
+++ b/templates/install.html
@@ -23,7 +23,7 @@
                         <pre><code>pip install flask</code></pre>
                         <p>Install gunicorn:</p>
                         <pre><code>pip install gunicorn</code></pre>
-                        <p>Congrats! You now have Flask installed. If you want to see how to make a simple Flask app,
+                        <p>Congratulations! You now have Flask installed. If you want to see how to make a simple Flask app,
                             see the <a href="{{ url_for('tutorial') }}">Tutorial</a> page.</p>
                     </div>
                 </div>
@@ -50,6 +50,7 @@
                         <pre><code>npm install semantic-ui --save</code></pre>
                         <pre><code>cd semantic/</code></pre>
                         <pre><code>gulp build</code></pre>
+                        <p>Congratulations! You now have Semantic UI installed.</p>
                     </div>
                 </div>
             </div>
@@ -112,7 +113,8 @@
                         <p>To confirm, see if heroku is available as an option with the command below:</p>
                         <pre><code>git status</code></pre>
                         <pre><code>git push heroku master</code></pre>
-                        <p>Congratulations! Your website should now be online with Heroku. After the results are done loading
+                        <p>Congratulations! Your website should now be online with Heroku. After the results are done
+                            loading
                             on
                             your terminal screen, heroku should give you a link to view your website.</p>
                     </div>
@@ -120,4 +122,5 @@
             </div>
         </div>
     </div>
-    {% endblock content %}
+</div>
+{% endblock content %}
