--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -103,7 +103,8 @@
                         <pre><code>python filename</code></pre>
                         <p>On your terminal screen, you will be given a link to view your flask app. Copy paste it
                             into
-                            your favourite browser, or simply put into your address bar: localhost:5000</p>
+                            your favourite browser, or simply put into your address bar: </p>
+                        <pre><code>localhost:5000</code></pre>
                         <p>This will run the flask app locally and you can see changes from your computer.</p>
                     </div>
                 </div>
