finished pros and cons

--- a/templates/home.html
+++ b/templates/home.html
@@ -138,12 +138,14 @@
                         <div class="ui bulleted list">
                             <div class="item">
                                 <div class="content">
-                                    <div class="header">Extremely flexible</div>
+                                    <div class="header">Extremely flexible and lightweight</div>
+                                    <p>Flask has a lighter footprint with the source code, it is very simple for developers to use.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="content">
                                     <div class="header">Minimalist without sacrificing power</div>
+                                    <p>Flask is very simple. If you want to get a "Hello World!" set up, it can be easily done by following the tutorials section and putting <pre><code>"Hello World!"</code></pre> right after <pre><code>return</code></pre></p>
                                 </div>
                             </div>
                             <div class="item">
@@ -154,6 +156,7 @@
                             <div class="item">
                                 <div class="content">
                                     <div class="header">Routing URLs is easy</div>
+                                    <p>It is as simple as copy and pasting the <pre><code>@app.route</code></pre> code sections from the tutorial, and simply changing a few values</p>
                                 </div>
                             </div>
                             <div class="item">
@@ -170,12 +173,14 @@
                             </div>
                             <div class="item">
                                 <div class="header">Limited support and documentation</div>
+                                <p>The documentation for installing Flask was confusing, so YouTube was also consulted. The knowledge gained from both sources is in the tutorials section.</p>
                             </div>
                             <div class="item">
                                 <div class="header">Lack of database and forms</div>
                             </div>
                             <div class="item">
                                 <div class="header">Truely limited in features</div>
+                                <p>Due to both points above, Django is usually preferred over Flask if a clear finished product is already kept in mind. After all, Flask is a microframework, it is not really meant for really complex web pages. In that case, frameworks such as Django would be preferred over Flask.</p>
                             </div>
                         </div>
 
