--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% if title %}
-    <title>CPS530 Project - {{ title }}</title>
+    <title>Learn Flask and SemanticUI - {{ title }}</title>
     {% else %}
-    <title>CPS530 Project</title>
+    <title>Learn Flask and SemanticUI</title>
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='semantic/dist/semantic.css') }}" />
